--- a/src/app.css
+++ b/src/app.css
@@ -33,8 +33,8 @@
         --bg-primary: #000000;
         --bg-secondary: #000000;
         --bg-surface: #000000;
-        --bg-accent: #353535;
-        --bg-active: #575757;
+        --bg-accent: #1a56b7;
+        --bg-active: #3b3b3b;
         --bg-hover: #000000;
 
         --border:rgba(255,255,255,.4);
