style: updated css

--- a/src/app.css
+++ b/src/app.css
@@ -15,11 +15,8 @@
     --radius:5px;
 
     --border:rgba(0,0,0,.4);
-
+    
     color-scheme: light;
-
-
-
 }
 
 @media (prefers-color-scheme: dark) {
@@ -31,9 +28,9 @@
         --active: #ffffff;
         --hover: #FFFFFF;
         --bg-primary: #000000;
-        --bg-secondary: #000000;
+        --bg-secondary: #150d0d;
         --bg-surface: #000000;
-        --bg-accent: #1a56b7;
+        --bg-accent: #002766;
         --bg-active: #3b3b3b;
         --bg-hover: #000000;
 
