--- a/src/app.css
+++ b/src/app.css
@@ -165,3 +165,25 @@ form button {
     width: 100%;
     background-color: var(--bg-accent);
 }
+
+
+
+.overlay {
+    position: relative;
+}
+
+.overlay::after {
+    position: absolute;
+    color: white;
+    bottom: -30px;
+    background-color: rgb(28, 28, 28);
+    padding: 2px 4px;
+    z-index: 10;
+    left:50%;
+    font-size: .7rem;
+    width: max-content;
+}
+
+.overlay:hover::after {
+    content: attr(data-overlay) "";
+}
