styles changed and a asset has been added

--- a/src/app.css
+++ b/src/app.css
@@ -3,81 +3,79 @@
 @tailwind utilities;
 
 :root {
-    --primary: #FFFFFF;
-    --secondary: #FFFFFF;
-    --surface: #FFFFFF;
-    --accent: #FFFFFF;
-    --active: #FFFFFF;
-    --hover: #FFFFFF;
-    --bg-primary: #000000;
-    --bg-secondary: #000000;
-    --bg-surface: #000000;
-    --bg-accent: #000000;
-    --bg-active: #000000;
-    --bg-hover: #000000;
+  --primary: #ffffff;
+  --secondary: #ffffff;
+  --surface: #ffffff;
+  --accent: #ffffff;
+  --active: #ffffff;
+  --hover: #ffffff;
+  --bg-primary: #000000;
+  --bg-secondary: #000000;
+  --bg-surface: #000000;
+  --bg-accent: #000000;
+  --bg-active: #000000;
+  --bg-hover: #000000;
 
-    --radius: 5px;
+  --radius: 5px;
 
-    --border: rgba(0, 0, 0, .4);
+  --border: rgba(0, 0, 0, 0.4);
 
-    color-scheme: light;
+  color-scheme: light;
 }
 
 @media (prefers-color-scheme: dark) {
-    :root {
-        --primary: #FFFFFF;
-        --secondary: #FFFFFF;
-        --surface: #FFFFFF;
-        --accent: #FFFFFF;
-        --active: #ffffff;
-        --hover: #FFFFFF;
-        --bg-primary: #000000;
-        --bg-secondary: #150d0d;
-        --bg-surface: #000000;
-        --bg-accent: #002766;
-        --bg-active: #3b3b3b;
-        --bg-hover: #000000;
+  :root {
+    --primary: #ffffff;
+    --secondary: #ffffff;
+    --surface: #ffffff;
+    --accent: #ffffff;
+    --active: #ffffff;
+    --hover: #ffffff;
+    --bg-primary: #000000;
+    --bg-secondary: #150d0d;
+    --bg-surface: #000000;
+    --bg-accent: #053b90;
+    --bg-active: #3b3b3b;
+    --bg-hover: #000000;
 
-        --border: rgba(255, 255, 255, .4);
-        color-scheme: dark;
-
-    }
+    --border: rgba(255, 255, 255, 0.4);
+    color-scheme: dark;
+  }
 }
 
 /* prefers reduced motion */
 @media (prefers-reduced-motion: reduce) {
-
-    *,
-    *::before,
-    *::after {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    }
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
 
 img {
-    object-fit: cover;
-    object-position: center;
+  object-fit: cover;
+  object-position: center;
 }
 
 button {
-    background-color: transparent;
-    border: none;
+  background-color: transparent;
+  border: none;
 }
 
 *,
 *::after,
 *::before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font: inherit;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font: inherit;
 }
 
 nav :where(ol, ul) {
-    list-style: none;
+  list-style: none;
 }
 
 /* img,
@@ -94,96 +92,96 @@ h3,
 h4,
 h5,
 h6 {
-    overflow-wrap: break-word;
+  overflow-wrap: break-word;
 }
-
 
 button {
-    cursor: pointer;
-    font-size: var(--fs-sm);
-    display: grid;
-    place-items: center;
-    border: none;
-    background-color: hsl(var(--bkg));
-    box-shadow: var(--shadow-md);
+  cursor: pointer;
+  font-size: var(--fs-sm);
+  display: grid;
+  place-items: center;
+  border: none;
+  background-color: hsl(var(--bkg));
+  box-shadow: var(--shadow-md);
 }
 
-
 body {
-    width: 100vw;
-    max-width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    background-color: var(--bg-primary);
-    color: var(--secondary);
-    font-size: 1rem;
-    font-family: 'Atkinson Hyperlegible', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
+  width: 100vw;
+  max-width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background-color: var(--bg-primary);
+  color: var(--secondary);
+  font-size: 1rem;
+  font-family: "Atkinson Hyperlegible", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+
+  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Irish+Grover&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Irish+Grover&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@200&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Irish+Grover&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,700;1,400;1,600&family=Exo+2:wght@200&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Irish+Grover&display=swap");
 }
 
 small {
-    font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 a,
 a:visited {
-    text-decoration: none;
-    font: inherit;
+  text-decoration: none;
+  font: inherit;
 }
 
 form {
-    width: 100%;
-    max-width: 400px;
-    flex-grow: 1;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    background-color: color-mix(in srgb, currentColor 20%, transparent);
-    border-radius: var(--radius);
+  width: 100%;
+  max-width: 400px;
+  flex-grow: 1;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  background-color: color-mix(in srgb, currentColor 20%, transparent);
+  border-radius: var(--radius);
 }
 
 label {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 input {
-    height: 2.5rem;
-    width: 100%;
-    padding: .2rem;
+  height: 2.5rem;
+  width: 100%;
+  padding: 0.2rem;
 }
-
 
 form button {
-    width: 100%;
-    background-color: var(--bg-accent);
+  width: 100%;
+  background-color: var(--bg-accent);
 }
 
-
-
 .overlay {
-    position: relative;
+  position: relative;
 }
 
 .overlay::after {
-    position: absolute;
-    color: white;
-    bottom: -30px;
-    background-color: rgb(28, 28, 28);
-    padding: 2px 4px;
-    z-index: 10;
-    left:50%;
-    font-size: .7rem;
-    width: max-content;
+  position: absolute;
+  color: white;
+  bottom: -30px;
+  background-color: rgb(28, 28, 28);
+  padding: 2px 4px;
+  z-index: 10;
+  left: 50%;
+  font-size: 0.7rem;
+  width: max-content;
 }
 
 .overlay:hover::after {
-    content: attr(data-overlay) "";
+  content: attr(data-overlay) "";
 }
