styled login page

--- a/src/app.css
+++ b/src/app.css
@@ -34,7 +34,7 @@
     --bg-primary: #000000;
     --bg-secondary: #150d0d;
     --bg-surface: #000000;
-    --bg-accent: #002766;
+    --bg-accent: #021a42;
     --bg-active: #3b3b3b;
     --bg-hover: #000000;
 
