--- a/src/app.css
+++ b/src/app.css
@@ -60,11 +60,6 @@ img {
   object-position: center;
 }
 
-button {
-  background-color: transparent;
-  border: none;
-}
-
 *,
 *::after,
 *::before {
@@ -97,12 +92,8 @@ h6 {
 
 button {
   cursor: pointer;
-  font-size: var(--fs-sm);
-  display: grid;
-  place-items: center;
+  font: inherit;
   border: none;
-  background-color: hsl(var(--bkg));
-  box-shadow: var(--shadow-md);
 }
 
 body {
