--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600;700;800&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -140,7 +140,7 @@ input {
   height: 2.5rem;
   width: 100%;
   padding: 0.2rem;
-  font:inherit;
+  font: inherit;
 }
 
 form button {
