--- a/src/app.css
+++ b/src/app.css
@@ -47,6 +47,7 @@
 
 /* prefers reduced motion */
 @media (prefers-reduced-motion: reduce) {
+
   *,
   *::before,
   *::after {
@@ -168,6 +169,57 @@ form button {
   content: attr(data-overlay) "";
 }
 
+/* Add styles for the dialogs */
 dialog {
+  background: linear-gradient(to bottom, #2c3e50, #34495e);
+  border-radius: 15px;
+  padding: 1rem;
   margin: auto;
+}
+
+dialog p {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  color: white;
+}
+
+dialog form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+dialog label {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+dialog input {
+  padding: 0.75rem;
+  border: 1px solid #bbb;
+  border-radius: 6px;
+  background: transparent;
+  color: #ffffff;
+}
+
+dialog select {
+  /* Customize select styles */
+  padding: 0.75rem;
+  border: 1px solid #bbb;
+  border-radius: 6px;
+  background: transparent;
+  color: white;
+  cursor: pointer;
+}
+
+dialog button {
+  padding: 0.75rem;
+  background-color: #007bff;
+  border-radius: 6px;
+  transition: background-color 0.3s ease;
+}
+
+dialog button:hover {
+  background-color: #0056b3;
 }
